
Dependency updates
* Perl 5.32 (updated from 5.24)
* Dojo and Dijit 1.17.2 (from 1.16)
* PGObject 2.3.2 (updated from 2.2.0)
* PGObject::Simple 3.1.0 (updated from 3.0.2)
* PGObject::Simple::Role 2.1.1 (updated from 2.0.2)
* PGObject::Util::DBAdmin 1.6.1 (updated from 1.4.0)
* PostgreSQL 13 (updated from 10)
* Workflow 1.59 (upadted from 1.56)
* YAML::PP (new)
* YAML (dropped)


Changelog for 1.9 Series
Released 2021-09-24

Changelog for 1.9.15 (to be released)
* Fix Changelog for 1.9.14 - add two missing entries


Changelog for 1.9.14
* Fix reconciliation for multiple payments with the same Source (#6526)
* Fix reconciliation for payments with GL corrections (#6533)
* Fix GIFI account numbers not presented in the balance sheet report (#6520)
* Fix typo in the invoice TeX templates: acrue -> accrue (#6532)


Changelog for 1.9.13
* Fix line descriptions missing on AP transaction prints (#6482)
    Requires templates update.
* Support PostgreSQL 14 (#6500)
* Fix saving of vendor invoices (#6507)
* Allow deletion of transactions with shipto address (#6509)


Changelog for 1.9.12
* Fix CSV export regression since 1.9.8 throwing an error (#6474)
* Remove runtime Javascript dependencies with security issues [CVE] (#6475)
* Fix tax form details reports throwing an error (#6458)


Changelog for 1.9.11
* Fix Goods > Search filters to honor selected part type (#6428)
* Update invoice creation date when posting recurring invoices (#6432)
* Fix double-counting of lines with business units in the trial balance (#6402)


Changelog for 1.9.10
* Second fix for sending e-mail due to the incompatibility in Workflow 1.59


Changelog for 1.9.9
* Fix sending e-mail due to an incompatibility in Workflow 1.59 (#6413)


Changelog for 1.9.8
* Fix regression in editing e-mail fields being discarded (#6168)
* Fix regression in CSV download report being mostly empty (#6389)
* Fix authentication failure returning incorrect HTTP error number (#6380)


Changelog for 1.9.7